Refactor PDF loading process to handle multiple files and improve chunk splitting

--- a/ctse_ragbot.ipynb
+++ b/ctse_ragbot.ipynb
@@ -79,17 +79,28 @@
     }
    ],
    "source": [
+    "import glob\n",
     "from langchain.document_loaders import PyMuPDFLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "\n",
-    "loader = PyMuPDFLoader(\"2023-S1-SE4020-Lecture-03-Functions.pdf\")\n",
-    "docs = loader.load()\n",
-    "print(f\"Successfully loaded {len(docs)} pages from PDF\")\n",
+    "# Get all PDF files in the folder\n",
+    "pdf_files = glob.glob(\"docs/*.pdf\")\n",
     "\n",
-    "# Split the document into chunks\n",
+    "# Initialize empty lists to store all docs and chunks\n",
+    "all_docs = []\n",
+    "all_chunks = []\n",
+    "\n",
+    "# Process each PDF file\n",
+    "for pdf_file in pdf_files:\n",
+    "    loader = PyMuPDFLoader(pdf_file)\n",
+    "    docs = loader.load()\n",
+    "    all_docs.extend(docs)\n",
+    "    print(f\"Successfully loaded {len(docs)} pages from {pdf_file}\")\n",
+    "\n",
+    "# Split all documents into chunks\n",
     "splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=100)\n",
-    "chunks = splitter.split_documents(docs)\n",
-    "print(f\"Document split into {len(chunks)} chunks\")\n",
+    "chunks = splitter.split_documents(all_docs)\n",
+    "print(f\"Documents split into {len(chunks)} chunks\")\n",
     "\n",
     "# Combine into a single context string (limit to ~12k chars)\n",
     "context = \"\\n\\n\".join([doc.page_content for doc in chunks])[:12000]\n",
