Update ask_gemini function to handle unknown answers and set execution count to null

--- a/ctse_ragbot.ipynb
+++ b/ctse_ragbot.ipynb
@@ -19,18 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0835f884",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gemini API key loaded successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import requests\n",
@@ -64,20 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c11f92e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully loaded 28 pages from PDF\n",
-      "Document split into 28 chunks\n",
-      "Context string created with 7743 characters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
     "from langchain.document_loaders import PyMuPDFLoader\n",
@@ -122,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e19cf2c0",
    "metadata": {},
    "outputs": [],
@@ -139,6 +121,8 @@
     "{question}\n",
     "\n",
     "Please format your answer to include relevant page numbers in brackets [Page X] where the information comes from.\n",
+    "\n",
+    "If you don't know the answer, say \"I don't know\" and do not make up an answer.\n",
     "\"\"\"\n",
     "    payload = {\n",
     "        \"contents\": [\n",
@@ -167,44 +151,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "43bcf896",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In Swift, a closure is essentially a self-contained block of functionality that can be passed around and used in your code. Swift allows you to use a function as a type, just like an integer or a string. [Page 18].\n",
-      "\n",
-      "Here's a breakdown:\n",
-      "\n",
-      "*   **Functions as Types:** Swift treats functions as first-class citizens. This means you can assign a function to a variable. [Page 18].\n",
-      "\n",
-      "*   **Capture Values:** Closures can \"capture\" references to constants and variables from the surrounding context (the scope in which they are defined). This is known as \"closing over\" values. [Page 18]. This means the closure can access and even modify those variables, even if the surrounding scope is no longer active.\n",
-      "\n",
-      "*   **Use Cases:** Closures are particularly useful in scenarios where you want to store some functionality to be executed later or repeatedly. Some common use cases include:\n",
-      "    *   Waiting for a period of time before executing code. [Page 19].\n",
-      "    *   Handling UI animations or interactions that need to complete before further actions are taken. [Page 19].\n",
-      "    *   Asynchronous operations, such as network requests, where you want to execute code upon completion. [Page 19].\n",
-      "\n",
-      "*   **Example:** The lecture notes provide an example demonstrating a function `cooked(pizza: String, minutes: Int)` and its closure equivalent:\n",
-      "\n",
-      "```swift\n",
-      "func cooked(pizza: String, minutes: Int) {\n",
-      "    print(\"\\(pizza) Pizza is cooked in \\(minutes) minutes.\")\n",
-      "}\n",
-      "let pizzaCooked = { (pizza: String, minutes: Int) in\n",
-      "  print(\"\\(pizza) Pizza is cooked in \\(minutes) minutes.\")\n",
-      "}\n",
-      "```\n",
-      "[Page 20]\n",
-      "\n",
-      "In this example, `pizzaCooked` is a closure assigned to a variable. It takes a pizza name (String) and cooking time (Int) as input, and prints a message.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(ask_gemini(\"Explain the closure in swift?\"))\n"
    ]
